# InteractivePatchProjection

./: .gitmodules  CMakeLists.txt  Interactive.cpp  InteractivePatchProjectionWidget.cpp  InteractivePatchProjectionWidget.h  InteractivePatchProjectionWidget.ui  PixmapDelegate.cpp  PixmapDelegate.h  TableModelEigenBasis.cpp  TableModelEigenBasis.h
